added page landmark, adjusted container padding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="container-a">
       <div class="card">
         <a href="https://www.frontendmentor.io/" target="_blank">
@@ -36,6 +36,6 @@
         Coded by <a href="https://www.frontendmentor.io/profile/nsgiles">Nathan Giles</a>.
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
