--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main class="container">
-    <a href="#">
+    <a href="#" class="card-link">
       <div class="card">
         <img
           class="card-img"
