fix copy and margin

--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -18,7 +18,7 @@
         alt="Jessica Randall"
       />
       <div class="card-name">Jessica Randall</div>
-      <div class="card-location">United Kingdom</div>
+      <div class="card-location">London, United Kingdom</div>
       <div class="card-tagline">"Front-end developer and avid reader."</div>
       <ul class="card-links-list">
         <li><a class="card-link" href="#">GitHub</a></li>
